# InsectSigProc

./: README.md  pyproject.toml
app/: snd_sep.py  tool_trial.py  util.py
config/insect_snd_sep/hparams/convtasnet/: convtasnet-mix2-gh-cricket-clean-4k-k8s4.yaml  convtasnet-mix2-gh-cricket-clean-k16s8.yaml  convtasnet-mix2-gh-cricket-clean-k8s4-causal-false.yaml  convtasnet-mix2-gh-cricket-clean-k8s4.yaml
config/insect_snd_sep/hparams/resepformer/: mix2-gh-cricket-aug-clean-k16s8-masklayer6.yaml  mix2-gh-cricket-aug-clean-k16s8.yaml  mix2-gh-cricket-aug-clean-k8s4-dffn2048.yaml  mix2-gh-cricket-aug-clean-k8s4-dffn512.yaml  mix2-gh-cricket-aug-clean-k8s4-masklayer6.yaml  mix2-gh-cricket-aug-clean-k8s4-mdl-layer16.yaml  mix2-gh-cricket-aug-clean-k8s4-nhead16.yaml  mix2-gh-cricket-aug-clean-k8s4-outchan256.yaml  mix2-gh-cricket-aug-clean-k8s4.yaml  mix2-gh-cricket-clean-4k-k8s4.yaml
config/insect_snd_sep/hparams/sepformer/: insect-mix2-gh-bird-clean-mini.yaml  insect-mix2-gh-bird-clean.yaml  insect-mix2-gh-bird-noise.yaml  insect-mix2-gh-cricket-aug-clean-k8s4-dffn2048.yaml  insect-mix2-gh-cricket-aug-clean-k8s4-dffn512.yaml  insect-mix2-gh-cricket-aug-clean-k8s4-nhead16.yaml  insect-mix2-gh-cricket-aug-clean-k8s4.yaml  insect-mix2-gh-cricket-clean-k8s4-double-layer.yaml  insect-mix2-gh-cricket-clean-k8s4-outchan512.yaml  insect-mix2-gh-cricket-clean-k8s4.yaml  insect-mix2-gh-cricket-clean.yaml  insect-mix2-gh-cricket-noise-k8s4.yaml  (+18 more)
insectsigproc/insect_snd_sep/: README.md  prepare_data.md  train_insect.py  train_insect2.py
insectsigproc/util/: dataset.py
(+1 files in other folders)
