[tool.poetry]
name = "insectsigproc"
version = "0.1.0"
description = ""
authors = ["Ryan Zhang <ryanzhang106@gmail.com>"]
readme = "README.md"
packages = [{include = "insectsigproc"}]

[tool.poetry.dependencies]
python = "^3.10"
typer = "^0.9.0"
pyfunctional = {git = "https://github.com/EntilZha/PyFunctional.git"}
returns = "^0.20.0"
numpy = "^1.24.3"
matplotlib = "^3.7.1"


[tool.poetry.group.dev.dependencies]
mypy = "^1.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
